2001-07-26  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/dialog_window.c: new file containing all the dialog_window_*
	functions from gtkutils.c (for further move in the libghfaxwidgets
	library)

2001-07-25  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/urlzone.c: new utility, add URL links to pixmap widgets.

2001-05-28  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/thumblayout.c (usr_btn_state_changed_cb): insensitive
	buttons don't prevent the layout to be scrolled with the mouse
	wheel anymore. The trick is to deactivate the button_press event
	catching when the widget is insensitive and do the reverse when it
	is sensitive.

2001-05-21  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/thumblayout.c (mouse_scroll_event_cb): added support for
	mouse-wheel in Win32.
	(mouse_press_event_cb): added support for mouse-wheel in GNU.

2001-05-20  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/thumblayout.c: new file along with thumblayout.h. It creates
	a pseudo widget with a scrolling container for the thumbnails.
	Written to be "portable" to other projects. GAL has a similar
	widget, but since I want to keep compatibility with GTK+...

2001-05-15  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/callbcks.c (close_file_cb): this function was moved from
	fileopen.c to here.

	* src/fileopen.c (file_dlg_ok_cb): file_name was never freed.
	(file_dlg_ok_cb): deletion of fail_list and fail_reason_list
	                  (reminiscence from the past)
	

2001-05-10  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/gtkutils.c: treat all widgets as GtkWidget and not as their
	real type (GtkButton, ...).
	(win32gdk_window_set_transient_for): new function to really
	transientize our GdkWindow, waiting for a new version of GTK+ (>
	Dec 2000)...

	* src/ps_print.c (print_cb): when the printing system is
	unavailable, display an error dialog only once and still permit
	export to a ps file.

2001-05-08  Wolfgang Sourdeau  <wolfgang@contre.com>
